--- a/photography.html
+++ b/photography.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Emma Binns</title>
+    <title>Emma Binns: 4am</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href="index.html/#page-top">
                     Home
                 </a>
             </div>
@@ -50,19 +50,19 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="index.html/#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About Me</a>
+                        <a class="page-scroll" href="index.html/#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resume">Resume</a>
+                        <a class="page-scroll" href="index.html/#resume">Resume</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#photography">Photography</a>
+                        <a class="page-scroll" href="index.html/#photography">Photography</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="index.html/#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">4am</h1>
                         <p class="intro-text">I spent several days wandering around Oakland, PA around 4am and taking pictures.<br>There's a very distinct feeling of being alone on an empty street at night. You're simultaneously calm and unnerved; uncomfortable yet at home.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#photos" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
@@ -89,30 +89,32 @@
     </header>
 
     <!-- Resume Section -->
-    <section id="resume" class="content-section text-center">
+    <section id="photos" class="content-section text-center">
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2></h2>
-                    <p><img src="img/final12.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/car_drops.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/final10.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/tile_reflections.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/tile_building.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/eerie_window.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/gate_metal_close.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/gate_and_tar.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/wood_tall.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/gate_metal.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/tar_lines.jpg" class="img-responsive" alt=""></p>
                     <h2></h2>
-                    <p><img src="img/guard.jpg" class="img-responsive" alt=""></p>
+                    <p><img src="img/4am/address_lamp_reflection.jpg" class="img-responsive" alt=""></p>
+                    <h2></h2>
+                    <p><img src="img/4am/tree_bark.jpg" class="img-responsive" alt=""></p>
                 </div>
             </div>
         </div>
