--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <p>These are some of my latest photography projects.</p>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="wandering.html" class="portfolio-box">
                         <img src="img/home_final12.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -135,7 +135,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="emptycity.html" class="portfolio-box">
                         <img src="img/home_final10.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -150,12 +150,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="goinghome.html" class="portfolio-box">
                         <img src="img/home_final5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    Home
+                                    Going Home
                                 </div>
                                 <div class="project-category text-faded">
                                     Digital
@@ -165,7 +165,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="dollarstore.html" class="portfolio-box">
                         <img src="img/ds_guard_thumb.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -180,12 +180,12 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="light.html" class="portfolio-box">
                         <img src="img/light_cool_smoke_thumb.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    Lights
+                                    Light
                                 </div>
                                 <div class="project-category text-faded">
                                     Digital
@@ -195,7 +195,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="4am.html" class="portfolio-box">
                         <img src="img/4am_tile_reflections_thumb.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
