--- a/light.html
+++ b/light.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Emma Binns: 4am</title>
+    <title>Emma Binns: Light</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="css/grayscale_photo.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -40,7 +40,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html/#page-top">
+                <a class="navbar-brand page-scroll" href="index.html">
                     Home
                 </a>
             </div>
@@ -50,7 +50,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
-                        <a href="index.html/#page-top"></a>
+                        <a href="#page-top"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="index.html/#about">About Me</a>
@@ -77,8 +77,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">4am</h1>
-                        <p class="intro-text">I spent several days wandering around Oakland, PA around 4am and taking pictures.<br>There's a very distinct feeling of being alone on an empty street at night. You're simultaneously calm and unnerved; uncomfortable yet at home.</p>
+                        <h1 class="brand-heading">Light</h1>
+                        <p class="intro-text">I'm not really sure what to say here.</p>
                         <a href="#photos" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -93,28 +93,30 @@
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
+                    <center><img src="img/light_chandelier.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/car_drops.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_drops.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/tile_reflections.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_jar.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/tile_building.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_jar_pair.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/eerie_window.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_backlit_smoke.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/gate_metal_close.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_cool_warm_candle.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/gate_and_tar.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_cool_smoke.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/wood_tall.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_warm_smoke.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/gate_metal.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_glass.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/tar_lines.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_storage.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/address_lamp_reflection.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_fire2.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <p><img src="img/4am/tree_bark.jpg" class="img-responsive" alt=""></p>
+                    <center><img src="img/light_window.jpg" class="img-responsive" alt="" align="center"></center>
+                    <h2></h2>
                 </div>
             </div>
         </div>
