adding jewelry box image

--- a/dollarstore.html
+++ b/dollarstore.html
@@ -99,11 +99,13 @@
                     <h2></h2>
                     <center><img src="img/ds_smores.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/ds_birthday.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/ds_jewelry_box.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                     <center><img src="img/ds_doll_repair.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                     <center><img src="img/ds_crochet_skeleton.jpg" class="img-responsive" alt="" align="center"></center>
+                    <h2></h2>
+                    <center><img src="img/ds_birthday.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                 </div>
             </div>
