fixing storage reference

--- a/light.html
+++ b/light.html
@@ -111,7 +111,7 @@
                     <h2></h2>
                     <center><img src="img/light_glass.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_storage.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_storage1.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                     <center><img src="img/light_fire2.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
