--- a/wandering.html
+++ b/wandering.html
@@ -53,16 +53,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html/#about">About Me</a>
+                        <a class="page-scroll" href="index.html#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html/#resume">Resume</a>
+                        <a class="page-scroll" href="index.html#resume">Resume</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html/#photography">Photography</a>
+                        <a class="page-scroll" href="index.html#photography">Photography</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="index.html/#contact">Contact</a>
+                        <a class="page-scroll" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
