--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Resume</h2>
-                    <p><a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Click Here</a> to view my complete resume.</p>
+					<img src="img/resume.jpg" class="img-responsive" alt="">
                 </div>
             </div>
         </div>
