testing smaller pics

--- a/goinghome.html
+++ b/goinghome.html
@@ -93,13 +93,13 @@
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <center><img src="img/home_final1.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final1_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final2.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final2_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final3.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final3_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final4.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final4_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                     <center><img src="img/home_final5.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
