shrunk going home pics

--- a/goinghome.html
+++ b/goinghome.html
@@ -101,21 +101,21 @@
                     <h2></h2>
                     <center><img src="img/home_final4_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final5.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final5_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final6.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final6_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final7.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final7_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final8.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final8_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final9.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final9_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final10.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final10_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final11.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final11_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/home_final12.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/home_final12_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                 </div>
             </div>
