shrinking 4am pics, reorganizing home pics

--- a/4am.html
+++ b/4am.html
@@ -93,27 +93,27 @@
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <center><img src="img/4am_car_drops.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_car_drops_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_tile_reflections.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_tile_reflections_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_tile_building.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_tile_building_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_eerie_window.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_eerie_window_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_gate_metal_close.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_gate_metal_close_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_gate_and_tar.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_gate_and_tar_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_wood_tall.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_wood_tall_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_gate_metal.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_gate_metal_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_tar_lines.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_tar_lines_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_address_lamp_reflection.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_address_lamp_reflection_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/4am_tree_bark.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/4am_tree_bark_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                 </div>
             </div>
