shrinking light pics, reorganizing pics

--- a/light.html
+++ b/light.html
@@ -93,29 +93,29 @@
         <div class="row">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <center><img src="img/light_chandelier.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_chandelier_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_drops.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_drops_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_jar.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_jar_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_jar_pair.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_jar_pair_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_backlit_smoke.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_backlit_smoke_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_cool_warm_candle.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_cool_warm_candle_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_cool_smoke.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_cool_smoke_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_warm_smoke.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_warm_smoke_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_glass.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_glass_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_storage1.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_storage1_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                     <center><img src="img/light_fire2.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
-                    <center><img src="img/light_window.jpg" class="img-responsive" alt="" align="center"></center>
+                    <center><img src="img/light_window_small.jpg" class="img-responsive" alt="" align="center"></center>
                     <h2></h2>
                 </div>
             </div>
