--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="wandering.html" class="portfolio-box">
-                        <img src="img/home_final12.jpg" class="img-responsive" alt="">
+                        <img src="img/home_final12_small.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="emptycity.html" class="portfolio-box">
-                        <img src="img/home_final10.jpg" class="img-responsive" alt="">
+                        <img src="img/home_final10_small.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="goinghome.html" class="portfolio-box">
-                        <img src="img/home_final5.jpg" class="img-responsive" alt="">
+                        <img src="img/home_final5_small.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -181,7 +181,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="light.html" class="portfolio-box">
-                        <img src="img/light_cool_smoke_thumb.jpg" class="img-responsive" alt="">
+                        <img src="img/light_cool_smoke_thumb_small.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -196,7 +196,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="4am.html" class="portfolio-box">
-                        <img src="img/4am_tile_reflections_thumb.jpg" class="img-responsive" alt="">
+                        <img src="img/4am_tile_reflections_thumb_small.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
