changing header text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Emma Binns</h1>
-                        <p class="intro-text">Carnegie Mellon University School of Computer Science<br>Photography Minor</p>
+                        <p class="intro-text">Carnegie Mellon University<br>Computer Science Major, Photography Minor</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
