--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Emma Binns</h1>
-                        <p class="intro-text">Carnegie Mellon University<br>Computer Science Major, Photography Minor</p>
+                        <p class="intro-text">Computer Scientist, Photographer</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -93,8 +93,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>Hi! My name is Emma Binns, and I'm currently a rising senior in Carnegie Mellon University's <a href="https://www.scs.cmu.edu/">School of Computer Science</a>, majoring in computer science and minoring in photography.</p>
-                <p>This website is designed to give you a brief glance at who I am and what I do. Feel free to reach out to me if you have any questions, comments, or just want to say hi!</p>
+                <p>Hi! My name is Emma Binns, and I recently graduated from Carnegie Mellon University's <a href="https://www.scs.cmu.edu/">School of Computer Science</a>, majoring in computer science and minoring in photography.</p>
+                <p>This website is designed to give you a brief glance at who I am and what I do, and to serve as a place to host my photographs.</p>
             </div>
         </div>
     </section>
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Resume</h2>
-					<img src="img/resume.jpg" class="img-responsive" alt="">
+					<img src="img/resumeFeb16.jpg" class="img-responsive" alt="">
                 </div>
             </div>
         </div>
